Spring boot 3 security - Fixed entities